--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
   <div class="login-container" id="login-container">
     <h1>Login</h1>
     <div class="form-group">
-      <label for="login-email">Email:</label>
-      <input type="email" id="login-email" required>
+      <label for="login-email">Usuário:</label>
+      <input type="text" id="login-email" required>
     </div>
     <div class="form-group">
       <label for="login-password">Senha:</label>
@@ -37,8 +37,8 @@
   <div class="register-container" id="register-container" style="opacity: 0; display: none;">
     <h1>Registro</h1>
     <div class="form-group">
-      <label for="register-email">Email:</label>
-      <input type="email" id="register-email" required>
+      <label for="register-email">Usuário:</label>
+      <input type="text" id="register-email" required>
     </div>
     <div class="form-group">
       <label for="register-password">Senha:</label>
