--- a/public/pages/editar.html
+++ b/public/pages/editar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -9,32 +9,40 @@
   <meta name="theme-color" content="#ffffff">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adicionar Gastos</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <title>Editar Gasto</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <div class="container">
-  <h1>Adicionar Gasto</h1>
-  <form id="expense-form">
+  <h1>Editar Gasto</h1>
+  <p id="welcome-message"></p>
+
+  <!-- Formulário para editar gasto -->
+  <div id="edit-expense-form">
     <div class="form-group">
       <label for="expense">Descrição do Gasto:</label>
-      <input type="text" id="expense" placeholder="Descrição do gasto">
+      <input type="text" id="expense" name="expense" required>
     </div>
+
     <div class="form-group">
       <label for="amount">Valor:</label>
-      <input type="number" id="amount" placeholder="Valor">
+      <input type="number" id="amount" name="amount" step="0.01" required>
     </div>
-    <div class="form-group">
-      <!-- Corrigido o ID -->
-      <button id="add-expense-btn">Adicionar Gasto</button>
-    </div>
-  </form>
 
-  <button id="back-to-dashboard">Voltar para o Dashboard</button>
+    <div class="form-group">
+      <label for="date">Data:</label>
+      <input type="text" id="date" name="date" >
+    </div>
+
+    <div class="form-actions">
+      <button id="save-edit-btn">Salvar Alterações</button>
+      <button id="cancel-edit-btn">Cancelar</button>
+    </div>
+  </div>
+
+  <button id="logout-btn">Sair</button>
 </div>
 
-
-
-<script type = "module" src="/js/add-expense.js"></script>
+<script type="module" src="../js/editar.js"></script>
 </body>
 </html>
